--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h6 {
 
 .main-card-back {
   position: absolute;
-  bottom: 15%;
+  top: 55%;
   left: 15%;
 }
 
@@ -135,7 +135,7 @@ h6 {
   justify-content: center;
   align-items: center;
   flex: 1;
-  margin-left: 3em;
+  margin-left: 7em;
 }
 
 .form {
@@ -151,9 +151,11 @@ h6 {
 label {
   display: block;
   width: 100%;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.7em;
   text-transform: uppercase;
   color: var(--very-dark-violet);
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 input {
