--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ input::placeholder {
   outline: none;
   background-color: var(--very-dark-violet);
   color: var(--white);
-  padding: 0.5em 0rem;
+  padding: 0.7em 0rem;
   font-size: 1.2rem;
   border-radius: 6px;
   cursor: pointer;
@@ -413,6 +413,10 @@ input::placeholder {
 }
 
 @media screen and (min-width: 1550px) {
+  html {
+    font-size: 17px;
+  }
+
   .main-card-front {
     top: calc(100px * 2);
   }
